objects/OmniProcessAsmtQuestionVer.object
<CustomObject>
    <fields>
        <fullName>FINS_Related_Omni_Element_Active_Flag__c</fullName>
        <formula>OmniProcessElement.IsActive</formula>
        <label>Related Omni Element Active Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FINS_Related_Omni_Process_Active_Flag__c</fullName>
        <formula>OmniProcess.IsActive</formula>
        <label>Related Omni Process Active Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FINS_Related_Omni_Process_Unique_Name__c</fullName>
        <formula>OmniProcess.UniqueName</formula>
        <label>Related Omni Process Unique Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FINS_Related_Omni_Process_Version__c</fullName>
        <formula>OmniProcess.VersionNumber</formula>
        <label>Related Omni Process Version</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>All_OmniProcessAsmtQuestionVers</fullName>
        <filterScope>Everything</filterScope>
        <label>All Omni Process Assessment Question Versions</label>
    </listViews>
    <sharingModel>Private</sharingModel>
</CustomObject>